Update according to new skills

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -20,12 +20,11 @@
 
 \begin{rSection}{summary}
 
-Proficient skilled worker with a focus on the EECS: 6+ years in embedded systems design. I have built own experience
-through hardware and software codesign. Strong skills in electrical engineering, computer science and researching. Ability to
-produce stable results under high pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team
-of professionals and to lead own product from nothing till mass production. Main areas of interest: consumer electronics, robotics,
-automotive and game industry, medical equipment, telecommunications, computer networks, internet of things, indoor navigation and more.
-Looking for new opportunities to continue the career.
+Proficient skilled worker with a focus on the EECS: 6+ years in embedded systems design. I have built own experience through hardware and
+software codesign. Strong skills in electrical engineering, computer science and researching. Ability to produce stable results under high
+pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team of professionals and to lead own product
+from nothing till mass production. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment,
+telecommunications, computer networks, internet of things, indoor navigation and more. Looking for new opportunities to continue the career.
 
 \end{rSection}
 
@@ -145,9 +144,9 @@ GPA: 3.86/4
       Embedded C and C++ (source code mixing). C++11. STL. Boost. Interrupt- and event-driven design. Free reading and writing Assembler code
       areas. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom, Buildroot.
       Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers, LKM. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. UT
-      frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. VCS: Perforce, SVN, Git. Code inspection: Code Collaborator, Review
-      Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. iOS
-      apps: Swift. Progressive system languages: Rust, Go. Crash logs analyzing. Remote debugging (customer support). JTAG in-circuit emulation.
+      frameworks: CppUTest. Static code analyzers: Cppcheck, PVS-Studio, ReSharper C++. VCS: Perforce, SVN, Git. Code inspection: Code Collaborator,
+      Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt.
+      iOS apps: Swift. Progressive system languages: Rust, Go. Crash logs analyzing. Remote debugging (customer support). JTAG in-circuit emulation.
 
 \item \textbf{HW development}
 
@@ -165,9 +164,9 @@ GPA: 3.86/4
 
 \item \textbf{Miscellaneous}
 
-      Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks. Experience in
-      transferring of knowledges: electronics and programming foundations. Driver license in progress: motorcycles, cars (manual and automatic
-      transmission).
+      Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks.
+      Experience in transferring of knowledges: electronics and software engineering foundations. Driver license: manual and automatic
+      transmissions.
 
 \end{rItemize}
 \end{rSection}
@@ -193,7 +192,7 @@ GPA: 3.86/4
 CLion, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, customer support, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, DVT, Eagle CAD, Eclipse,
 Eddystone, eTraxis, EVT, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW\&SW codesign, IEEE 802.3af, I2C, IAR, iBeacon,
 image sensor, iOS, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, LKM, Make, Maxima, MCS-51, macOS, microcontroller, MIPS, Mind Maps, MinGW,
-MkDocs, NMake, NPI, OOP, OS2000, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper
+MkDocs, NMake, NPI, OOP, OS2000, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, PVS-Studio, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper
 C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, Swift, TCP/IP, \TeX,
 ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 
