Remove some informational blocks

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -1,92 +1,66 @@
 \documentclass{template}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \name{Vladimir Yu. Ivanov}
 
 \address{
-      \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
-      \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
-      \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}
-}
+    \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
+    \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
+    \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?userinfo}{v.u.ivanov}}
 
-\address{
-      \em Vladivostok, Maritime Province, Russia
-}
+\address{\em Saint Petersburg, Russian Federation}
 
 \begin{document}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{summary}
 
-Proficient skilled worker with a focus on the EECS: 6+ years in embedded systems design. I have built own experience through hardware and
-software codesign. Strong skills in electrical engineering, computer science and researching. Ability to produce stable results under high
-pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team of professionals and to lead own product
-from nothing till mass production. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment,
-telecommunications, computer networks, internet of things, indoor navigation and more. Looking for new opportunities to continue the career.
+Proficient engineer with a focus on the EECS: 6+ years in embedded systems design. I have built own
+experience through hardware and software codesign. Strong skills in electrical engineering,
+computer science and researching. Ability to produce stable results under high pressure conditions.
+Main areas of interest: consumer electronics, robotics, automotive industry, computer networks,
+medical equipment.
 
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{education}
 
 {\bf \href{https://www.dvfu.ru/en/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
-M.Sc. Department of General Physics and Electronics. \newline
-\href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline
-GPA: 3.63/4
+Engineer's degree. Information Systems and Technologies. \newline
+GPA: 3.63
 
-{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
-Secondary education. \newline
-Indepth study of Japanese Language. \newline
-GPA: 3.80/4
-
-{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 1995 -- June 2003} \newline
-General education. \newline
-Indepth study of Japanese Language. \newline
-GPA: 3.86/4
+{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 1995 -- June 2005} \newline
+Secondary education. In-depth study of Japanese Language. \newline
+GPA: 3.80
 
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{rSection}{certificates}
-\begin{rItemize}
+\begin{rSection}{experience}
+\begin{rCompany}{\href{http://www.tra.ai}{TRA Robotics}}{June 2017 -- present}{Software Developer}{Saint Petersburg}
 
-\item 2-month course \href{http://www.vova-ivanov.info/6.00.1x-Certificate.pdf}
-      {\textquote{6.00.1x: Introduction to CS and Programming}}. Excellent passing grade. \newline
-      The online learning initiative of Harvard University and MIT, December 2013.
-\item 3-month course \href{http://www.vova-ivanov.info/6.002x-Certificate.pdf}
-      {\textquote{6.002x: Circuits and Electronics}}. Maximum passing grade. \newline
-      The online learning initiative of Harvard University and MIT, June 2012.
-\item Course of Japanese Language. The course of 1150 hours and a number of final exams. \newline
-      Secondary school 51, Vladivostok, 1995 -- 2005.
+\item Technological startup around industrial robots. Launching of the factory using universal
+      robotic cell.
+\item Grippers
+\item Industrial robots
 
-\end{rItemize}
-\end{rSection}
+\end{rCompany}
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- May 2017}{Embedded Software Engineer}{Vladivostok}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{rSection}{main experience}
-\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer (full-time)}{Vladivostok, RU}
-
-\item Camera SDK development team member for digital imaging products based on \href{http://www.ambarella.com}{\textit{Ambarella}} SoC.
-\item Full independent development cycle of the Transport Module (TM) within SDK team: presentation of the design plan and architecture
-      (Mind Maps, UML), initial implementation (plain C, C++), build system design (CMake, Python, BAT, Bash), UT infrastructure bring up
-      (CppUTest), documentation support (Doxygen). The TM is used to autotest SDK functionality in QA lab via RPC and for factory acceptance
-      testing of the customer's products on production lines. The module is provided as cross-platform and multi-transport library with C-style
-      asynchronous API which transparently covers UART, USB and TCP/IP data exchange capabilities. The TM is integrated by application engineers
-      on Windows, Linux and customer's platforms (ARM, ThreadX, embedded Linux) using wide range of supported (cross)compilers (Visual Studio,
-      GCC, MinGW, IAR).
-\item Data link layer protocol design and implementation for physical layers without data delivery guarantee to transparently integrate this
-      capability via dedicated API (e.g. TM in case of data exchange over UART).
-\item Customer's boards validations (bring up) in \href{http://www.flextronics.com}{\textit{Flextronics}} (TX, United States),
-      \href{http://aqs-inc.com}{\textit{AQS}} (CA, United States) and \href{http://www.asia-optical.com/}{\textit{Asia Optical}} (Shenzhen, China)
-      electronics factories. Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT
-      project phases: \href{https://www.nanit.com}{\textit{Nanit}} (smart baby monitor, embedded Linux based product), \href{https://fusar.com}{\textit{Fusar}}
-      (motorcycle DVR), \href{http://www.glide.me}{\textit{Glide}} (Apple Watch wristcam, rigid-flex boards), \href{https://revl.com}{\textit{Revl}}
-      (action camera with motor stabilizer), \href{https://www.soloshot.com}{\textit{Soloshot}} (robotic cameraman).
+\item Camera SDK development team member, \href{http://www.ambarella.com}{\textit{Ambarella}} SoC (ARM Cortex-A), about 80 participants.
+\item Designed and implemented data transfer static library, cross-platform (Windows, Linux, ThreadX), multi-protocol (USB, UART, TCP),
+      asynchronous C-style API, plain C (platform- and protocol-specific logic), C++ (transport-specific logic), build system (CMake,
+      Python), CppUTest (UT infra).
+\item The library was used to autotest SDK functionality in company's QA lab and to test customer's products in factory production lines.
+\item Boards bringup for customer's projects in electronics factories: \href{http://www.flextronics.com}{\textit{Flextronics}} (TX, United
+      States), \href{http://aqs-inc.com}{\textit{AQS}} (CA, United States), \href{http://www.asia-optical.com/}{\textit{Asia Optical}}
+      (Shenzhen, China). Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT
+      project phases.
 \item Peripheral domain support as the member of SDK sub-team: embedded Linux and RTOS device drivers, FW burning tool features (Qt application)
       for QA lab, EE and PCB design review for customer's projects.
 \item \href{http://www.csr.com}{\textit{CSR}} contractor. Distributed support of the embedded software for ODM/OEM customers based on \textit{COACH}
@@ -118,23 +92,7 @@ GPA: 3.86/4
 \end{rCompany}
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{rSection}{optional experience}
-\begin{rCompany}{\href{http://dalpribor.ru}{Dalpribor}}{May 2016 -- August 2016}{Embedded Software Consultant (contract)}{Vladivostok, RU}
-
-\item Military avionics project of design bureau based on the \textquote{Baget} platform: VMEbus computer assembly with MIPS, DSP, ADC, RS-232
-      board modules and RS-232 sensor modules which is driven by OS2000 POSIX compatible RTOS.
-\item Leading developer left the company and head of bureau invited to help to cover open items which blocks initial delivery of the project to
-      the customer: to solve system stuck problem after 2 hours of autonomous operation and to fix wrong initialization of new DSP boards after
-      power up. First item relates to inverstigation of the toolchain, build system and code base to solve software problem. Second one -- to conversation
-      with \href{http://www.insys.ru}{\textit{InSys}} company which is developer of DSP boards to check ideas.
-\item Terms of the contract were covered completely ahead of time: 2.5 month instead of 4 by schedule.
-
-\end{rCompany}
-\end{rSection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{skills}
 \begin{rItemize}
@@ -171,20 +129,7 @@ GPA: 3.86/4
 \end{rItemize}
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{rSection}{Publications}
-\begin{rItemize}
-
-\item Ivanov V. \textquote{Diagnostic system of the motor drive module for the underwater robot}. Master thesis. \newline
-      Institute of Marine Technology Problems FEB RAS. Vladivostok, June 2010.
-\item Ivanov V. \textquote{Automated speed control of the motor shaft}. Bachelor thesis. \newline
-      Institute of Physics and Information Technologies FEFU. Vladivostok, May 2009.
-
-\end{rItemize}
-\end{rSection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{Keywords}
 
@@ -198,20 +143,7 @@ ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, Yo
 
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{rSection}{Hobby and Interests}
-\begin{rHobby}
-
-\item Hi-Tech and impacting one on a human being, hardware and software codesign
-\item Physics, applied math, world economic
-\item Professional sports leagues: NHL, NFL, MLB
-\item Swimming (sports category), marine multi-athlon (sports category)
-\item Cooking, electronic music
-\item Speedcubing, podcasting
-
-\end{rHobby}
-\end{rSection}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
 
