Fresh view to match CV cheat sheet

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -1,149 +1,120 @@
 \documentclass{template}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \name{Vladimir Yu. Ivanov}
 
 \address{
-    \Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
-    \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
-    \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?userinfo}{v.u.ivanov}}
+    \faPhoneSquare \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \textbar \
+    \faEnvelope \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \textbar \
+    \faLinkedinSquare \ \href{https://www.linkedin.com/in/vladimir-yu-ivanov/}{vladimir-yu-ivanov}}
 
 \address{\em Saint Petersburg, Russian Federation}
 
 \begin{document}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \begin{rSection}{summary}
 
-Proficient engineer with a focus on the EECS: 6+ years in embedded systems design. I have built own
-experience through hardware and software codesign. Strong skills in electrical engineering,
-computer science and researching. Ability to produce stable results under high pressure conditions.
-Main areas of interest: consumer electronics, robotics, automotive industry, computer networks,
-medical equipment.
+Proficient engineer (8+ yoe) with a focus on the EECS. Visited various electronics plants as board bring-up
+engineer for customer products. Helped robotic startup on the early stages of company formation. Services in
+HW and SW domains from development to deployment.
+
+Main areas of interest: consumer electronics,
+industrial and mobile robotics, automotive industry, high quality products, mechatronics, cyber-physical systems,
+technologies impact on human beings and on economics.
 
 \end{rSection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{rSection}{education}
-
-{\bf \href{https://www.dvfu.ru/en/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
-Engineer's degree. Information Systems and Technologies. \newline
-GPA: 3.63
-
-{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 1995 -- June 2005} \newline
-Secondary education. In-depth study of Japanese Language. \newline
-GPA: 3.80
-
-\end{rSection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{rSection}{experience}
-\begin{rCompany}{\href{http://www.tra.ai}{TRA Robotics}}{June 2017 -- present}{Software Developer}{Saint Petersburg}
-
-\item Technological startup around industrial robots. Launching of the factory using universal
-      robotic cell.
-\item Grippers
-\item Industrial robots
-
-\end{rCompany}
-\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- May 2017}{Embedded Software Engineer}{Vladivostok}
-
-\item Camera SDK development team member, \href{http://www.ambarella.com}{\textit{Ambarella}} SoC (ARM Cortex-A), about 80 participants.
-\item Designed and implemented data transfer static library, cross-platform (Windows, Linux, ThreadX), multi-protocol (USB, UART, TCP),
-      asynchronous C-style API, plain C (platform- and protocol-specific logic), C++ (transport-specific logic), build system (CMake,
-      Python), CppUTest (UT infra).
-\item The library was used to autotest SDK functionality in company's QA lab and to test customer's products in factory production lines.
-\item Boards bringup for customer's projects in electronics factories: \href{http://www.flextronics.com}{\textit{Flextronics}} (TX, United
-      States), \href{http://aqs-inc.com}{\textit{AQS}} (CA, United States), \href{http://www.asia-optical.com/}{\textit{Asia Optical}}
-      (Shenzhen, China). Close coworking with local engineers (electrical, mechanical, NPI) and customers on EVT and DVT
-      project phases.
-\item Peripheral domain support as the member of SDK sub-team: embedded Linux and RTOS device drivers, FW burning tool features (Qt application)
-      for QA lab, EE and PCB design review for customer's projects.
-\item \href{http://www.csr.com}{\textit{CSR}} contractor. Distributed support of the embedded software for ODM/OEM customers based on \textit{COACH}
-      (Camera On A Chip) SoC with MIPS core.
-      Main brand manufacturers of imaging devices: \href{http://www.nikon.com}{\textit{Nikon}}, \href{http://www.pentax.com}{\textit{Pentax}},
-      \href{http://www.garmin.com}{\textit{Garmin}}, \href{http://www.samsung.com}{\textit{Samsung}}, \href{http://www.fujifilm.com}{\textit{Fujifilm}},
-      \href{http://www.abilitycorp.com.tw}{\textit{Ability}}. Support sites are located in a number of countries: China, Israel, Japan, Russia,
-      South Korea, United States.
-\item Solving of time critical project issues under customer's pressure. Number of various \textquote{MP block} software problems were resolved
-      and processing performance of UI images in customer's projects was improved.
-\item Peripheral domain support as the member of team. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support
-      for smear correction driver team. NV memory storages: FS bug fixing, NAND drivers timing optimizations. Display cluster: issues
-      related to video output (LCD, HDMI). Volatile memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral:
-      support for BSP (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug
-      fixing and new features implementation for FW burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic
-      voltage management based on PID-controller.
-\item SoC software trainings in \textit{CSR Israel} (formerly \textit{Zoran Corp}.): MATAM, Haifa.
-
-\end{rCompany}
-\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Embedded Systems Engineer (full-time)}{Vladivostok, RU}
-
-\item Applied hardware development startup company.
-\item Mechanicalless manipulator prototyping as part of the project management software system: accel- and gyro-based console.
-\item Transformerless vacuum tube stereo amplifier prototying for headphones: simple SRPP cascade and preamplifier per channel.
-\item Prototype of the PoE injector (PSE device) designing and manufacturing. IEEE 802.3af full compatible implementation based on the LTC4263 IC by
-      \href{http://www.linear.com}{\textit{Linear Technology}}. The product was used in a number of computer network projects with different
-      sets of PD devices: \href{http://www.cisco.com}{\textit{Cisco}} routers, IP cameras and more.
-
-\end{rCompany}
-\end{rSection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{rSection}{skills}
 \begin{rItemize}
 
-\item \textbf{SW development}
-
-      Embedded C and C++ (source code mixing). C++11. STL. Boost. Interrupt- and event-driven design. Free reading and writing Assembler code
-      areas. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom, Buildroot.
-      Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers, LKM. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. UT
-      frameworks: CppUTest. Static code analyzers: Cppcheck, PVS-Studio, ReSharper C++. VCS: Perforce, SVN, Git. Code inspection: Code Collaborator,
-      Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt.
-      iOS apps: Swift. Progressive system languages: Rust, Go. Crash logs analyzing. Remote debugging (customer support). JTAG in-circuit emulation.
-
-\item \textbf{HW development}
-
-      Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. BOM selection: excellent guided
-      both in through-hole and surface-mount packages. Routing and assembling of prototype PCBA: Eagle CAD, Sprint Layout, KiCAD,
-      Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit MCUs. Power electronics understanding: linear and
-      impulse circuits. EE lab equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function
-      generator, autotransformer and more.
-
-\item \textbf{Languages}
-
-      Russian (native) \newline
-      English (ability to hold conversation) \newline
-      \begin{CJK}{UTF8}{min}日本語\end{CJK} (elementary on N5 level)
-
-\item \textbf{Miscellaneous}
-
-      Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks.
-      Experience in transferring of knowledges: electronics and software engineering foundations. Driver license: manual and automatic
-      transmissions.
+\item \textbf{Computer languages:} plain C, C++17 and STL, Python, Bash, TeX, 8-bit assembler.
+\item \textbf{Development tools:} gcc, gdb, Make, CMake, Docker, Vagrant, Ansible, Jenkins, SAST.
+\item \textbf{Various technologies:} TCP/IP, REST, Maxima, Actor Model, deb-packages.
+\item \textbf{Version control systems:} Subversion, Perforce, Git (main).
+\item \textbf{Software platforms:} POSIX, WinAPI, RTOS, ROS, Qt.
+\item \textbf{Embedded systems:} MCU, PLC, PCBA, Buildroot, device drivers, semiconductors, EE-lab equipment.
 
 \end{rItemize}
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{rSection}{experience}
+\begin{rCompany}{\href{https://www.tra.ai}{TRA robotics}}{June 2017 -- present}{Lead Software Engineer (full-time)}{Saint Petersburg, Russian Federation}
 
-\begin{rSection}{Keywords}
+\item Transnational technological company around Industry 4.0 and smart manufacturing.
+\item Implemented SW for robotic tool controller as a member of multi-domain team. Presented HW and SW design proposals, performed initial SW implementation and
+      controller integration into factory SW ecosystem. Launched 3 kinds of tools: Schunk's jaw-gripper, tool-changer and custom glue-gun.
+      Stack: C++17, CMake, Boost, POCO, CAF, yaml-cpp, Python, PyTest, Bash, Docker, Vagrant, Systemd, Ansible, Doxygen, RPi CM, STM32.
+\item Helped to interview and to on-board 2 candidates for Embedded Engineer team role to cover controller's HW part.
+\item Performed R\&D to evaluate gripper controller candidates. Ended up with BnR industrial PLC.
+      Created network control FW. Stack: C++11, Automation Studio specific SW blocks.
+\item Implemented gripper component and integrated with other factory components.
+      Stack: C++14, Docker, Boost, POCO, CMake, Bash, Python, PyTest, syslog, FPM, RPi.
+\item Investigated how to launch remote control for 6-axis robotic manipulators. Connected 3 vendors: Fanuc, ABB, Universal Robots. Stack: C++11, ROS, Python.
 
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, board bring up, BSP, Buildroot, C, C++11, CAN,
-CLion, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, customer support, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, DVT, Eagle CAD, Eclipse,
-Eddystone, eTraxis, EVT, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW\&SW codesign, IEEE 802.3af, I2C, IAR, iBeacon,
-image sensor, iOS, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, LKM, Make, Maxima, MCS-51, macOS, microcontroller, MIPS, Mind Maps, MinGW,
-MkDocs, NMake, NPI, OOP, OS2000, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, PVS-Studio, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper
-C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, Swift, TCP/IP, \TeX,
-ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
+\end{rCompany}
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{May 2015 -- May 2017}{Software Engineer III (full-time)}{Vladivostok, Russian Federation}
+
+\item Camera SDK development team member based on Ambarella SoC with ARM core.
+\item Supported peripheral domain as member of SDK sub-team. LKM and RTOS device drivers, EE and PCB review for customer's projects,
+      FW burning tool features (Qt application).
+\item Implemented data transfer library: cross-platform (Windows, Linux, ThreadX) and multi-protocol (USB, UART, TCP). The library was used to test SDK functionality
+      via RPC in QA lab and on customer's production lines. Stack: plain C, C++11, CMake, Python, CppUTest, Cppcheck, Doxygen, OS-abstraction layer.
+\item Prepared and provided boards bring-up for 5 customer's projects in electronics factories: Nanit, Fusar, Glide (Flextronics, TX), REVL (AQS, CA),
+      Soloshot (Asia Optical, Shenzhen). EVT and DVT project phases.
+
+\end{rCompany}
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- May 2015}{Software Engineer I, II (full-time)}{Vladivostok, Russian Federation}
+
+\item CSR plc contractor. Distributed support of embedded SW for ODM/OEM customers based on COACH SoC with MIPS core:
+      Nikon, Pentax, Garmin, Samsung, Fujifilm, Ability. Support sites: China, Israel, Japan, Russia, South Korea, US.
+\item Solving of time critical project issues under customer's pressure. Resolved a number of MP-block SW problems.
+\item Supported peripheral domain as member of team. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities.
+      NV memory: FS bug fixing, NAND drivers timing optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile memory:
+      DRAM performance measurement and timing optimizations. On-chip peripheral: BSP drivers (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units).
+      PC-side applied SW: bug fixing and new features implementation for FW burning tool (windows forms).
+\item SoC SW trainings at CSR Israel: MATAM, Haifa.
+
+\end{rCompany}
+\begin{rCompany}{Spider Pacific}{October 2010 -- October 2012}{Electrical Engineer (full-time)}{Vladivostok, Russian Federation}
+
+\item Applied HW design and manufacturing.
+\item Designed and manufactured network PoE injector (PSE). Provided IEEE 802.3af full compatible solution. \newline
+      The injector was used in a number of computer network projects by customers. BOM: LTC4263 IC, AC/DC.
+\item Manufactured transformer-less stereo amplifier for headphones. BOM: vacuum tubes and audio-quality components.
+\item Designed prototype of mechanical-less manipulator. BOM: G-sensor, gyro sensor, Arduino, Wiring, USB, OP-amps.
+
+
+\end{rCompany}
+\end{rSection}
+
+\begin{rSection}{education}
+
+{\bf \href{https://www.msu.ru/en/}{Moscow State University}} (Moscow, Russian Federation) \hfill {2018 -- 2020} \newline
+MBA, Technology Management. School of Public Administration.
+
+{\bf \href{https://www.dvfu.ru/en/}{Far Eastern State University}} (Vladivostok, Russian Federation) \hfill {2005 -- 2010} \newline
+Engineer, General Physics and Electronics. Institute of Physics and Information Technologies.
 
 \end{rSection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{rSection}{languages}
+\begin{rItemize}
+
+\item Russian, native
+\item English, ability to hold conversation
+\item Japanese, elementary, alphabet, kanji
+
+\end{rItemize}
+\end{rSection}
+
+\begin{rSection}{keywords}
+
+1-Wire, ADC, Ansible, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, board bring-up, BSP, Buildroot, C, C++, CAF, ccache, CMake,
+Code Collaborator, Cppcheck, CppUTest, cross-compiler, customer support, Cygwin, DAC, DEB package, device driver, Docker, Doxygen, DVT, Eagle CAD,
+EE, Eigen, EVT, FAT, FileX, GCC, Gerber, Git, GitLab, G-sensor, gyro sensor, HW\&SW co-design, IEEE 802.3af, I2C, IAR, image sensor, Jenkins, JIRA,
+Jom, JTAG, KiCAD, libpng, libusb, Linux, LKM, Make, Maxima, macOS, microcontroller, MIPS, Mind Maps, MinGW, NMake, NPI, OOP, OS2000, OSI, Perforce,
+PLC, POCO, POSIX, Proxxon, Python, PVS-Studio, PWM, Qt, QuickBuild, RAW Bayer, R\&D, ReSharper C++, REST, Review Board, ROS, RS-232, RTOS, SPI, SoC,
+Sprint Layout, SQL, STL, SVN, TCP/IP, TeX, ThreadX, tmux, UART, UML, USB, Vagrant, Visual Studio, Win32, Windows, Winsock, zlib
+
+\end{rSection}
 
 \end{document}
-
